--- a/src/app/pages/home/components/header/header.component.html
+++ b/src/app/pages/home/components/header/header.component.html
@@ -8,9 +8,9 @@
       <img
         src="../../../../../assets/images/logo.svg"
         alt="Логотип"
-        class="header__logo logo"
+        class="header__logo"
       />
-      <h1 class="header__heading heading">Финансы</h1>
+      <h1 class="header__heading">Финансы</h1>
     </ng-template>
   </p-menubar>
 </header>
