--- a/src/app/pages/home/components/home-page/home-diversification-section/home-diversification-section.component.html
+++ b/src/app/pages/home/components/home-page/home-diversification-section/home-diversification-section.component.html
@@ -14,7 +14,7 @@
 </section>
 <ng-template #textBlockDescription>
   <p class="diversification-section__description">
-    <span class="emphasized-text"
+    <span class="diversification-section__emphasized-text"
       >Диверсификация является стратегическим приоритетом.</span
     >
     Финансовым учреждениям необходимо повышать уровень потребительских и малых
