--- a/src/app/pages/home/components/home-page/home-hero-section/home-hero-section.component.scss
+++ b/src/app/pages/home/components/home-page/home-hero-section/home-hero-section.component.scss
@@ -1,9 +1,11 @@
 @import 'mixins';
 @import 'variables';
 
-.carousel {
-  display: block;
-  padding-bottom: 30px;
+.hero-section {
+  &__carousel {
+    display: block;
+    padding-bottom: 30px;
+  }
 
   &__slide {
     width: 100%;
