--- a/src/app/pages/home/components/home-entry/home-entry.component.scss
+++ b/src/app/pages/home/components/home-entry/home-entry.component.scss
@@ -5,21 +5,23 @@
   min-height: 100vh;
 }
 
-.header {
-  position: fixed;
-  top: 0;
-  right: 0;
-  z-index: $header-layer;
+.home {
+  &__header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: $header-layer;
 
-  width: 95%;
+    width: 95%;
+  }
+
+  &__footer {
+    display: block;
+    width: 95%;
+    margin-left: auto;
+  }
 }
 
 .main {
   padding-top: 90px;
-}
-
-.footer {
-  display: block;
-  width: 95%;
-  margin-left: auto;
 }
