--- a/src/app/pages/home/components/home-page/home-currencies-section/home-currencies-section.component.html
+++ b/src/app/pages/home/components/home-page/home-currencies-section/home-currencies-section.component.html
@@ -1,6 +1,6 @@
 <section class="currencies-section">
   <app-text-block
-    class="currencies-section__heading"
+    class="currencies-section__heading-wrapper"
     [heading]="textblockHeading"
     [colorVariant]="'bright'"
     [shadowEffect]="'duplicate'"
@@ -25,7 +25,7 @@
 </section>
 
 <ng-template #textblockHeading>
-  <div class="heading">
+  <div class="currencies-section__heading heading">
     <span class="heading__emoji">📈</span>
     <h2 class="heading__main-text">Изучите Пульс Криптовалюты</h2>
     <span class="heading__emoji">📉</span>
