--- a/src/app/pages/home/components/home-page/home-currencies-section/home-currencies-section.component.scss
+++ b/src/app/pages/home/components/home-page/home-currencies-section/home-currencies-section.component.scss
@@ -8,10 +8,6 @@
     margin: 0 auto;
   }
 
-  &__heading {
-    width: 100%;
-  }
-
   &__description {
     width: max(300px, 50%);
 
@@ -22,7 +18,7 @@
     text-align: justify;
   }
 
-  &__heading {
+  &__heading-wrapper {
     display: block;
     margin: 0 auto;
     width: max(300px, 75%);
