fix: изменён размер шрифта заголовка секции с курсом валют

--- a/src/app/pages/home/components/home-entry/home-entry.component.html
+++ b/src/app/pages/home/components/home-entry/home-entry.component.html
@@ -1,5 +1,5 @@
 <app-header class="home__header"></app-header>
-<main class="main">
+<main class="home__main">
   <router-outlet></router-outlet>
 </main>
 <app-footer class="home__footer"></app-footer>
