--- a/src/app/pages/home/components/home-entry/home-entry.component.scss
+++ b/src/app/pages/home/components/home-entry/home-entry.component.scss
@@ -15,13 +15,13 @@
     width: 95%;
   }
 
+  &__main {
+    padding-top: 90px;
+  }
+
   &__footer {
     display: block;
     width: 95%;
     margin-left: auto;
   }
-}
-
-.main {
-  padding-top: 90px;
 }
