--- a/src/app/pages/home/components/home-page/home-diversification-section/home-diversification-section.component.scss
+++ b/src/app/pages/home/components/home-page/home-diversification-section/home-diversification-section.component.scss
@@ -30,7 +30,7 @@
     width: max(70%, 250px);
   }
 
-  &__emphasized-text {
+  &__text_emphasized {
     color: var(--grey-900);
     font-weight: bold;
   }
