--- a/src/app/pages/home/components/home-page/home-hero-section/home-hero-section.component.scss
+++ b/src/app/pages/home/components/home-page/home-hero-section/home-hero-section.component.scss
@@ -9,16 +9,13 @@
 
   &__slide {
     width: 100%;
-  }
-}
+    height: calc(100vh - 150px);
 
-.slide {
-  height: calc(100vh - 150px);
+    @include flex($justify-content: space-around);
 
-  @include flex($justify-content: space-around);
-
-  &_reversed {
-    flex-direction: row-reverse;
+    &_reversed {
+      flex-direction: row-reverse;
+    }
   }
 
   &__image {
@@ -31,8 +28,8 @@
   }
 
   @media (max-width: 500px) {
-    &,
-    &_reversed {
+    &__slide,
+    &__slide_reversed {
       flex-direction: column-reverse;
     }
 
