feat: добавлена отрисовка курса валют относительно доллара, исправлена ошибка CORS

--- a/src/app/pages/home/components/home-page/home-currencies-section/home-currencies-section.component.html
+++ b/src/app/pages/home/components/home-page/home-currencies-section/home-currencies-section.component.html
@@ -15,11 +15,15 @@
     <div class="charts__heading">
       <p-tabMenu
         class="charts__tab-menu"
-        [model]="currenciesMenuItems"
+        [model]="(currenciesMenuItems$ | async) || undefined"
+        (activeItemChange)="onCurrencyChange($event)"
       ></p-tabMenu>
     </div>
     <div class="charts__inner">
-      <p-chart></p-chart>
+      <p-chart
+        [type]="'line'"
+        [data]="currentCurrencyTrades$ | async"
+      ></p-chart>
     </div>
   </div>
 </section>
