--- a/src/app/pages/home/components/home-page/home-currencies-section/home-currencies-section.component.html
+++ b/src/app/pages/home/components/home-page/home-currencies-section/home-currencies-section.component.html
@@ -16,13 +16,16 @@
       <p-tabMenu
         class="charts__tab-menu"
         [model]="(currenciesMenuItems$ | async) || undefined"
+        [activeItem]="(currenciesMenuItems$ | async)?.[0]"
         (activeItemChange)="onCurrencyChange($event)"
       ></p-tabMenu>
     </div>
     <div class="charts__inner">
       <p-chart
+        class="charts__chart"
         [type]="'line'"
-        [data]="currentCurrencyTrades$ | async"
+        [data]="currencyTradesChartData$ | async"
+        [options]="chartOptions"
       ></p-chart>
     </div>
   </div>
