feat: добавлена кнопка для прокрутки страницы вверх

--- a/src/app/pages/home/components/home-entry/home-entry.component.html
+++ b/src/app/pages/home/components/home-entry/home-entry.component.html
@@ -3,3 +3,4 @@
   <router-outlet></router-outlet>
 </main>
 <app-footer class="home__footer"></app-footer>
+<p-scrollTop class="home__scrolltop" [threshold]="200"></p-scrollTop>
