--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -2,5 +2,7 @@ $hover-transition: ease-in-out 300ms;
 
 // Z-index layers
 $header-layer: 2;
+$scrolltop-layer: 3;
+$footer-layer: 4;
 
 $one-sided-section-border-radius: 50px;
