--- a/src/app/pages/home/components/home-page/home-currencies-section/relative-currency-select/relative-currency-select.component.scss
+++ b/src/app/pages/home/components/home-page/home-currencies-section/relative-currency-select/relative-currency-select.component.scss
@@ -8,4 +8,16 @@
   &__description {
     text-align: center;
   }
+
+  &__option {
+    @include flex($gap: 5px);
+  }
+
+  &__icon {
+    height: 20px;
+  }
+
+  &__text {
+    flex-grow: 1;
+  }
 }
