feat: добавлено получение курса валют по ws и отображение обновлений в графике

--- a/src/app/pages/home/components/home-page/home-currencies-section/currencies-chart/currencies-chart.component.html
+++ b/src/app/pages/home/components/home-page/home-currencies-section/currencies-chart/currencies-chart.component.html
@@ -1,6 +1,6 @@
 <p-chart
   #chart
   [type]="'line'"
-  [data]="currencyTradesChartData$ | async"
+  [data]="currencyTrades | tradesToChartData"
   [options]="chartOptions"
 ></p-chart>
