--- a/src/app/pages/auth/components/login-page/login-page.component.html
+++ b/src/app/pages/auth/components/login-page/login-page.component.html
@@ -20,7 +20,7 @@
       severity="submit"
       >Войти</p-button
     >
-    <p-overlayPanel class="login-page__error-panel" #submitErrorPanel>
+    <p-overlayPanel #submitErrorPanel>
       <ng-template pTemplate="content">
         <h5 class="login-page__error-text">
           Пожалуйста, заполните все поля правильно
