--- a/src/app/pages/home/components/home-page/home-currencies-section/currencies-menu/currencies-menu.component.html
+++ b/src/app/pages/home/components/home-page/home-currencies-section/currencies-menu/currencies-menu.component.html
@@ -7,7 +7,7 @@
   <ng-template pTemplate="item" let-item>
     <a class="currencies-menu__tab p-menuitem-link">
       <img [alt]="item.label" [src]="item.icon" class="currencies-menu__icon" />
-      <span class="currencies-menu__name">
+      <span>
         {{ item.label }}
       </span>
     </a>
