--- a/src/app/pages/home/components/footer/footer.component.html
+++ b/src/app/pages/home/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer">
-  <div class="footer__social-links">
+  <div class="social-links">
     <a
-      class="social-link"
+      class="social-links__link"
       pButton
       pRipple
       [rounded]="true"
@@ -9,7 +9,7 @@
       *ngFor="let item of socialLinks"
       [href]="item.url!"
     >
-      <i class="{{ item.icon }} social-link__icon"></i
+      <i class="{{ item.icon }} social-links__icon"></i
     ></a>
   </div>
   <span class="footer__year">{{ currentYear }}</span>
