--- a/src/app/pages/home/components/footer/footer.component.scss
+++ b/src/app/pages/home/components/footer/footer.component.scss
@@ -1,4 +1,5 @@
 @import 'mixins';
+@import 'variables';
 
 .footer {
   border-top-left-radius: 50px;
@@ -8,10 +9,6 @@
 
   @include flex($align-items: flex-end, $direction: column, $gap: 15px);
 
-  &__social-links {
-    @include flex($gap: 15px);
-  }
-
   &__year {
     margin-right: 0.2em;
 
@@ -20,17 +17,21 @@
   }
 }
 
-.social-link {
-  cursor: pointer;
-  padding: 0.75rem;
+.social-links {
+  @include flex($gap: 15px);
+
+  &__link {
+    cursor: pointer;
+    padding: 0.75rem;
+
+    transition: translate $hover-transition;
+
+    &:hover {
+      translate: 0 -10px;
+    }
+  }
 
   &__icon {
     font-size: 1.5rem;
-  }
-
-  transition: translate ease-in-out 300ms;
-
-  &:hover {
-    translate: 0 -10px;
   }
 }
