refactor: изменены пути до ассетов

--- a/src/app/pages/home/components/header/header.component.html
+++ b/src/app/pages/home/components/header/header.component.html
@@ -5,11 +5,7 @@
     [styleClass]="'menubar-align-right menubar-large-icon'"
   >
     <ng-template pTemplate="start">
-      <img
-        src="../../../../../assets/images/logo.svg"
-        alt="Логотип"
-        class="header__logo"
-      />
+      <img src="assets/images/logo.svg" alt="Логотип" class="header__logo" />
       <h1 class="header__heading">Финансы</h1>
     </ng-template>
   </p-menubar>
