--- a/src/app/pages/home/components/home-page/home-diversification-section/home-diversification-section.component.html
+++ b/src/app/pages/home/components/home-page/home-diversification-section/home-diversification-section.component.html
@@ -7,7 +7,7 @@
     [shadowEffect]="'normal'"
   ></app-text-block>
   <img
-    src="../../../../../assets/images/home-page/portfolio.svg"
+    src="assets/images/home-page/portfolio.svg"
     alt="Картинка портфолио"
     class="diversification-section__portfolio-image"
   />
