--- a/src/app/pages/home/components/home-page/home-currencies-section/home-currencies-section.component.scss
+++ b/src/app/pages/home/components/home-page/home-currencies-section/home-currencies-section.component.scss
@@ -48,7 +48,7 @@
 .charts {
   width: max(300px, 90%);
 
-  background-color: var(--white-500);
+  background-color: var(--surface-0);
 
   border-radius: 0 0 50px 50px;
 
