--- a/src/app/shared/styles/_scrollbar.scss
+++ b/src/app/shared/styles/_scrollbar.scss
@@ -4,11 +4,11 @@ body {
   }
 
   &::-webkit-scrollbar-track {
-    background-color: var(--white-500);
+    background-color: var(--surface-0);
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: var(--white-600);
+    background-color: var(--surface-100);
     border-radius: 20px;
 
     &:hover {
