--- a/src/app/shared/styles/theme/_variables.scss
+++ b/src/app/shared/styles/theme/_variables.scss
@@ -16,41 +16,20 @@
   font-family: $fontFamily;
   --font-family: #{$fontFamily};
   --font-family-heading: #{$fontFamilyHeading};
-  --surface-a: #ffffff;
-  --surface-b: #f8f9fa;
-  --surface-c: #e9ecef;
-  --surface-d: #dee2e6;
-  --surface-e: #ffffff;
-  --surface-f: #ffffff;
+
   --text-color: #{$primaryTextColor};
-  --text-color-secondary: #{$accentColor};
-  --primary-color: #{$primaryColor};
-  --primary-color-text: #{$primaryTextColor};
   --primary-secondary-gradient: #{$gradient-primary-secondary};
   --primary-secondary-darkened-gradient: #{$gradient-primary-secondary-darkened};
   --surface-0: #ffffff;
-  --surface-50: #fafafa;
-  --surface-100: #f5f5f5;
-  --surface-200: #eeeeee;
-  --surface-300: #e0e0e0;
-  --surface-400: #bdbdbd;
-  --surface-500: #9e9e9e;
-  --surface-600: #757575;
-  --surface-700: #616161;
-  --surface-800: #424242;
-  --surface-900: #212121;
-  --content-padding: #{$panelContentPadding};
-  --inline-spacing: #{$inlineSpacing};
-  --border-radius: #{$borderRadius};
-  --surface-ground: #f8f9fa;
-  --surface-section: #ffffff;
-  --surface-card: #ffffff;
-  --surface-overlay: #ffffff;
-  --surface-border: #dee2e6;
-  --surface-hover: #e9ecef;
-  --maskbg: #{$maskBg};
-  --highlight-bg: #{$highlightBg};
-  --highlight-text-color: #{$highlightTextColor};
-  --focus-ring: #{$focusShadow};
+
+  --hover-transition: ease-in-out 300ms;
+
+  // Z-index layers
+  --header-layer: 2;
+  --scrolltop-layer: 3;
+  --footer-layer: 4;
+
+  --section-border-radius: 50px;
+
   color-scheme: light;
 }
