--- a/src/app/pages/home/components/header/header.component.html
+++ b/src/app/pages/home/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="header" [ngClass]="{ header_shrunk: isShrunk$ | async }">
+<header class="header" [ngClass]="{ header_shrunk: isShrunk }">
   <p-menubar
     class="header__navigation"
     [model]="menuItems"
