feat: добавлен лоадер на страницу логина

--- a/src/app/shared/styles/theme/_extensions.scss
+++ b/src/app/shared/styles/theme/_extensions.scss
@@ -4,3 +4,4 @@
 @import 'extensions/overlay-panel';
 @import 'extensions/menubar';
 @import 'extensions/toast';
+@import 'extensions/progress-spinner';
