--- a/src/app/pages/auth/components/login-page/login-page.component.html
+++ b/src/app/pages/auth/components/login-page/login-page.component.html
@@ -1,5 +1,9 @@
 <div class="login-page">
-  <form class="login-page__form" [formGroup]="formGroup">
+  <form
+    *ngIf="!isLoading; else loader"
+    class="login-page__form"
+    [formGroup]="formGroup"
+  >
     <div class="login-page__heading-wrapper">
       <h2 class="login-page__heading">Вход</h2>
       <p-divider></p-divider>
@@ -29,3 +33,6 @@
     </p-overlayPanel>
   </form>
 </div>
+<ng-template #loader>
+  <p-progressSpinner ariaLabel="loading" />
+</ng-template>
