fix: правильное помечивание формы и окрашивание полей ввода при отправке невалидной

--- a/src/app/pages/auth/components/login-page/login-page.component.html
+++ b/src/app/pages/auth/components/login-page/login-page.component.html
@@ -17,9 +17,10 @@
       [control]="formGroup.controls.password"
     ></app-password-input>
     <p-button
+      [type]="'submit'"
       class="login-page__submit-button"
       (mouseleave)="onSubmitButtonMouseOut()"
-      (onClick)="onSubmit($event)"
+      (click)="onSubmit($event)"
       [raised]="formGroup.valid"
       severity="submit"
       >Войти</p-button
