--- a/src/app/shared/styles/theme/extensions/_input.scss
+++ b/src/app/shared/styles/theme/extensions/_input.scss
@@ -11,6 +11,9 @@
   width: 100%;
 }
 
-form.ng-dirty.ng-invalid .p-inputtext {
-  @include invalid-input();
+form.ng-touched.ng-invalid {
+  .p-inputtext.ng-invalid,
+  .p-inputwrapper.ng-invalid .p-inputtext {
+    @include invalid-input();
+  }
 }
