feat: добавлен функционал логаута

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <router-outlet></router-outlet>
 <p-toast></p-toast>
+<p-confirmDialog
+  [acceptLabel]="'Да'"
+  [rejectLabel]="'Нет'"
+  [dismissableMask]="true"
+></p-confirmDialog>
