--- a/src/app/shared/styles/theme/_variables.scss
+++ b/src/app/shared/styles/theme/_variables.scss
@@ -5,12 +5,12 @@
 @import './variables/form';
 @import './variables/button';
 @import './variables/panel';
-@import './variables/_data';
-@import './variables/_overlay';
-@import './variables/_message';
-@import './variables/_menu';
-@import './variables/_media';
-@import './variables/_misc';
+@import './variables/data';
+@import './variables/overlay';
+@import './variables/message';
+@import './variables/menu';
+@import './variables/media';
+@import './variables/misc';
 
 :root {
   font-family: $fontFamily;
