fix: временное исправление помечивания полей ввода

--- a/src/app/shared/styles/theme/extensions/_input.scss
+++ b/src/app/shared/styles/theme/extensions/_input.scss
@@ -11,9 +11,7 @@
   width: 100%;
 }
 
-form.ng-touched.ng-invalid {
-  .p-inputtext.ng-invalid,
-  .p-inputwrapper.ng-invalid .p-inputtext {
-    @include invalid-input();
-  }
+.p-inputtext.ng-touched.ng-invalid,
+.p-inputwrapper.ng-touched.ng-invalid .p-inputtext {
+  @include invalid-input();
 }
