--- a/src/app/shared/styles/theme/variables/_message.scss
+++ b/src/app/shared/styles/theme/variables/_message.scss
@@ -80,19 +80,19 @@ $toastDetailMargin: $inlineSpacing 0 0 0;
 
 /// Background of an info message
 /// @group message
-$infoMessageBg: #039be5;
+$infoMessageBg: $primaryColor;
 
 /// Border of an info message
 /// @group message
-$infoMessageBorder: solid #027cb7;
+$infoMessageBorder: none;
 
 /// Text color of an info message
 /// @group message
-$infoMessageTextColor: #ffffff;
+$infoMessageTextColor: $textColor;
 
 /// Icon color of an info message
 /// @group message
-$infoMessageIconColor: #ffffff;
+$infoMessageIconColor: $textColor;
 
 /// Background of a success message
 /// @group message
