--- a/src/app/pages/home/components/header/header.component.scss
+++ b/src/app/pages/home/components/header/header.component.scss
@@ -14,6 +14,16 @@
         transition: top var(--hover-transition);
       }
     }
+
+    .p-menuitem-link {
+      .p-menuitem-icon {
+        color: var(--surface-0);
+      }
+
+      &:hover .p-menuitem-icon {
+        color: var(--text-color);
+      }
+    }
   }
 
   &:has(.header_shrunk) ::ng-deep {
