feat: добавлено модальное окно профиля с первичным контентом

--- a/src/app/shared/styles/theme/_variables.scss
+++ b/src/app/shared/styles/theme/_variables.scss
@@ -21,6 +21,7 @@
   --primary-secondary-gradient: #{$gradient-primary-secondary};
   --primary-secondary-darkened-gradient: #{$gradient-primary-secondary-darkened};
   --surface-0: #ffffff;
+  --maskbg: rgba(0, 0, 0, 0.4);
 
   --hover-transition: ease-in-out 300ms;
 
